Fixed logo on mobile. Closes #11

--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -260,9 +260,13 @@ input[type=checkbox] {
 }
 
 @media (max-width: 480px) {
-
     .logo {
         display:none;
     }
+}
 
+@media (min-width: 480px) {
+    .navbar-logo {
+        display:none;
+    }
 }
